--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,12 @@ before_install:
   - cd tests
 
 script: phpunit -v
+after_script:
+  - pwd
+  - cd ../
+#  - git init
+  - git config --global user.name "yakeing"
+  - git config --global user.email "yakeing@gmail.com"
+  - git tag v2.1
+  - git show v2.1
+  - git push --force --quiet "https://${TOKEN}@github.com/yakeing/php_curl.git" master:master
