--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_install:
 script: phpunit -v
 after_script:
   - pwd
-  - cd ../
+#  - cd ../
 #  - git init
-  - git config --global user.name "yakeing"
-  - git config --global user.email "yakeing@gmail.com"
-  - git tag v2.1
-  - git show v2.1
-  - git push --force --quiet "https://${TOKEN}@github.com/yakeing/php_curl.git" master:master
+#  - git config --global user.name "yakeing"
+#  - git config --global user.email "yakeing@gmail.com"
+#  - git tag v2.1
+#  - git show v2.1
+#  - git push --force --quiet "https://${TOKEN}@github.com/yakeing/php_curl.git" master:master
