--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ before_install:
   - composer self-update && composer install --no-interaction
   - cd tests
 
-script: phpunit -v
+script: phpunit --stderr
 after_script:
   - pwd
-  - cd ../
+#  - cd ../
 ##  - git init
-  - git config --global user.name "yakeing"
-  - git config --global user.email "yakeing@gmail.com"
-  - git tag v2.1
-  - git show v2.1
-  - git push --force --tags --quiet "https://${TOKEN}@github.com/yakeing/php_curl.git" master:master
+#  - git config --global user.name "yakeing"
+#  - git config --global user.email "yakeing@gmail.com"
+#  - git tag v2.1
+#  - git show v2.1
+#  - git push --force --tags --quiet "https://${TOKEN}@github.com/yakeing/php_curl.git" master:master
