--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -7,7 +7,7 @@
     </testsuites>
     <filter>
         <whitelist>
-            <directory suffix=".php">../src</directory>
+            <directory suffix=".php">../src/php_curl</directory>
             <exclude>
                 <directory>../vendor</directory>
             </exclude>
