--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,10 @@ deploy:
   provider: releases
   api_key:
     secure: ${GITHUB_TOKEN}
+  file_glob: true
   file: *.zip
   file: *.tar.gz
   skip_cleanup: true
-  on:
-    tags: true
 
 after_script:
   - cd ../
